--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
-              <a href="#home" class="nav-item nav-link active" data-section="home">Home</a>
-              <a href="#about" class="nav-item nav-link" data-section="about">About Us</a>
-              <a href="#services" class="nav-item nav-link" data-section="services">Our Services</a>
+              <a href="./index.html" class="nav-item nav-link active" data-section="home">Home</a>
+              <a href="./about.html" class="nav-item nav-link" data-section="about">About Us</a>
+              <a href="./service.html" class="nav-item nav-link" data-section="services">Our Services</a>
               <a href="#events" class="nav-item nav-link" data-section="events">Events</a>
               <a href="#testimonials" class="nav-item nav-link" data-section="testimonials">Testimonials</a>
-              <a href="#contact" class="nav-item nav-link" data-section="contact">Contact Us</a>
+              <a href="./contact.html" class="nav-item nav-link" data-section="contact">Contact Us</a>
             </div>
           </div>
         </nav>
